// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts.vue Should display a warning message for free users with 10 contracts 1`] = `
<div class="container container--fluid">
  <!---->
  <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text warning--text" style="">
    <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark warning--text"></i>
      <div class="v-alert__content">Free plan users are limited to 10 synced contracts. Remove some contracts or <a>upgrade</a> to the Premium plan for more.</div>
    </div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
    <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mr-1 mdi mdi-import theme--light" style="font-size: 16px;"></i>Import Contract
                </span></button>
      </div>
    </header>
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Address: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Address</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Deployed On: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Deployed On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x0" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x0</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x1" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x1</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x2" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x2</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x3" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x3</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x4" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x4</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x5" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x5</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x6" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x6</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x7" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x7</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x8" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x8</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x9" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x9</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="v-data-footer">
      <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-99" class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-99" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden" value="10">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-footer__pagination">1-10 of 10</div>
      <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
      <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
    </div>
  </div>
</div>
`;

exports[`Contracts.vue Should not display a warning message for premium users with 10 contracts 1`] = `
<div class="container container--fluid">
  <!---->
  <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text warning--text" style="display: none;">
    <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark warning--text"></i>
      <div class="v-alert__content">Free plan users are limited to 10 synced contracts. Remove some contracts or <a>upgrade</a> to the Premium plan for more.</div>
    </div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
    <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mr-1 mdi mdi-import theme--light" style="font-size: 16px;"></i>Import Contract
                </span></button>
      </div>
    </header>
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Address: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Address</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Deployed On: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Deployed On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x0" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x0</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x1" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x1</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x2" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x2</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x3" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x3</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x4" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x4</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x5" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x5</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x6" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x6</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x7" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x7</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x8" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x8</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x9" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x9</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="v-data-footer">
      <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-173" class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-173" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden" value="10">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-footer__pagination">1-10 of 10</div>
      <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
      <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
    </div>
  </div>
</div>
`;

exports[`Contracts.vue Should not display a warning message for public explorers 1`] = `
<div class="container container--fluid">
  <!---->
  <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text warning--text" style="display: none;">
    <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark warning--text"></i>
      <div class="v-alert__content">Free plan users are limited to 10 synced contracts. Remove some contracts or <a>upgrade</a> to the Premium plan for more.</div>
    </div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
    <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mr-1 mdi mdi-import theme--light" style="font-size: 16px;"></i>Import Contract
                </span></button>
      </div>
    </header>
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Address: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Address</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Deployed On: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Deployed On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x0" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x0</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x1" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x1</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x2" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x2</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x3" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x3</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x4" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x4</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x5" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x5</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x6" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x6</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x7" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x7</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x8" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x8</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x9" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">0x9</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="v-data-footer">
      <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-247" class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-247" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden" value="10">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-footer__pagination">1-10 of 10</div>
      <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
      <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
    </div>
  </div>
</div>
`;

exports[`Contracts.vue Should show the contracts list 1`] = `
<div class="container container--fluid">
  <!---->
  <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text warning--text" style="display: none;">
    <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark warning--text"></i>
      <div class="v-alert__content">Free plan users are limited to 10 synced contracts. Remove some contracts or <a>upgrade</a> to the Premium plan for more.</div>
    </div>
  </div>
  <import-contract-modal-stub></import-contract-modal-stub>
  <remove-contract-confirmation-modal-stub></remove-contract-confirmation-modal-stub>
  <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
    <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mr-1 mdi mdi-import theme--light" style="font-size: 16px;"></i>Import Contract
                </span></button>
      </div>
    </header>
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Address: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Address</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Deployed On: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Deployed On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          </tr>
        </thead>
        <tbody>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x0" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">My Contract</td>
            <td class="text-start"><span aria-haspopup="true" aria-expanded="false">
                            05/06 7:11:26 PM
                        </span><span class="v-tooltip v-tooltip--top"><!----></span></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
          <tr class="">
            <td class="text-start">
              <hash-link-stub contract="[object Object]" hash="0x1" type="contract"></hash-link-stub>
            </td>
            <td class="text-start">Another Contract</td>
            <td class="text-start"></td>
            <td class="text-start"></td>
            <td class="text-start"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--x-small error--text"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light"></i></span></button></td>
            <td class="text-start"></td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="v-data-footer">
      <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-24" class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-24" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden" value="10">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-footer__pagination">1-2 of 2</div>
      <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
      <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
    </div>
  </div>
</div>
`;

exports[`Contracts.vue Should show the loading message when empty contracts list 1`] = `
<div class="container container--fluid">
  <!---->
  <div role="alert" class="v-alert v-sheet theme--dark v-alert--dense v-alert--text warning--text" style="display: none;">
    <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark warning--text"></i>
      <div class="v-alert__content">Free plan users are limited to 10 synced contracts. Remove some contracts or <a>upgrade</a> to the Premium plan for more.</div>
    </div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
  <div class="v-data-table v-data-table--has-top v-data-table--has-bottom theme--light">
    <header class="py-0 v-sheet theme--light v-toolbar v-toolbar--dense v-toolbar--flat" style="height: 48px;">
      <div class="v-toolbar__content" style="height: 48px;">
        <div class="spacer"></div> <button type="button" class="mr-2 v-btn v-btn--has-bg theme--light v-size--small primary"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mr-1 mdi mdi-import theme--light" style="font-size: 16px;"></i>Import Contract
                </span></button>
      </div>
    </header>
    <div class="v-data-table__wrapper">
      <table>
        <colgroup>
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
          <col class="">
        </colgroup>
        <thead class="v-data-table-header">
          <tr>
            <th role="columnheader" scope="col" aria-label="Address: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Address</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Name: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Name</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Deployed On: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Deployed On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
            <th role="columnheader" scope="col" aria-label="Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span></span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          </tr>
        </thead>
        <tbody>
          <tr class="v-data-table__empty-wrapper">
            <td colspan="6">
              No contracts found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="v-data-footer">
      <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
          <div class="v-input__control">
            <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-65" class="v-input__slot">
              <div class="v-select__slot">
                <div class="v-select__selections">
                  <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-65" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                </div>
                <div class="v-input__append-inner">
                  <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                </div><input type="hidden" value="10">
              </div>
              <div class="v-menu">
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-footer__pagination">–</div>
      <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
      <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
    </div>
  </div>
</div>
`;
